
[TestFlags/no_flag:_[] - 1]
../bin/sway-setter
Usage:
  sway-setter [OPTIONS]

Application Options:
  -t, --type=  Type 'set_{type}' object to be set analog of 'swaymsg -t
               get_{type}'
  -p, --print  Prints commands that would be executed. Can be used as input to
               swaymsg

Help Options:
  -h, --help   Show this help message


---

[TestFlags/help_flag:_[-h] - 1]
../bin/sway-setter -h
Usage:
  sway-setter [OPTIONS]

Application Options:
  -t, --type=  Type 'set_{type}' object to be set analog of 'swaymsg -t
               get_{type}'
  -p, --print  Prints commands that would be executed. Can be used as input to
               swaymsg

Help Options:
  -h, --help   Show this help message


---

[TestFlags/help_flag:_[--help] - 1]
../bin/sway-setter --help
Usage:
  sway-setter [OPTIONS]

Application Options:
  -t, --type=  Type 'set_{type}' object to be set analog of 'swaymsg -t
               get_{type}'
  -p, --print  Prints commands that would be executed. Can be used as input to
               swaymsg

Help Options:
  -h, --help   Show this help message


---

[TestFlags/no_flag - 1]
sway-setter  <<EOF

EOF
The missing cli to use swaymsg 'getters' outputs

Usage:
  sway-setter [command]

Available Commands:
  completion  Generate the autocompletion script for the specified shell
  containers  Set containers from stdin - Use: `swaymsg -t get_tree`
  help        Help about any command
  outputs     Set outputs from stdin - Use: `swaymsg -t get_outputs`
  workspaces  Set workspaces from stdin - Use: `swaymsg -t get_workspaces`

Flags:
  -h, --help   help for sway-setter

Use "sway-setter [command] --help" for more information about a command.

---

[TestFlags/help_flag - 1]
sway-setter -h <<EOF

EOF
The missing cli to use swaymsg 'getters' outputs

Usage:
  sway-setter [command]

Available Commands:
  completion  Generate the autocompletion script for the specified shell
  containers  Set containers from stdin - Use: `swaymsg -t get_tree`
  help        Help about any command
  outputs     Set outputs from stdin - Use: `swaymsg -t get_outputs`
  workspaces  Set workspaces from stdin - Use: `swaymsg -t get_workspaces`

Flags:
  -h, --help   help for sway-setter

Use "sway-setter [command] --help" for more information about a command.

---

[TestFlags/help_flag#01 - 1]
sway-setter --help <<EOF

EOF
The missing cli to use swaymsg 'getters' outputs

Usage:
  sway-setter [command]

Available Commands:
  completion  Generate the autocompletion script for the specified shell
  containers  Set containers from stdin - Use: `swaymsg -t get_tree`
  help        Help about any command
  outputs     Set outputs from stdin - Use: `swaymsg -t get_outputs`
  workspaces  Set workspaces from stdin - Use: `swaymsg -t get_workspaces`

Flags:
  -h, --help   help for sway-setter

Use "sway-setter [command] --help" for more information about a command.

---
